jan-10-26: edits and bugs

--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,7 @@
         <li><a href="selected_works.html">Selected Works</a></li>
         <li><a href="software.html">Software & Codes</a></li>
         <li><a href="for_professionals.html">For Employers</a></li>
+        <li> <a href="writings.html">Wrtings, Language, and Literature</a></li>
     </ul>
 </nav>
 
