--- a/for_professionals.html
+++ b/for_professionals.html
@@ -5,6 +5,7 @@
         <li> <a href="selected_works.html">Selected Works</a></li>
         <li> <a href="software.html">Software & Codes</a></li>
         <li> <a href="for_professionals.html">For Employers</a></li>
+        <li> <a href="writings.html">Wrtings, Language, and Literature</a></li>
     </ul>
 </nav>
 
@@ -15,9 +16,8 @@
 <h2>Seth's Professional Resources</h2>
 <ul>
     <li>Complete CV of academic and professional career: online version available <a href="cv.html"> here</a> and a PDF
-        here: <a href="resources/SGerberding_CV_Jan_2026.pdf">SGerberding_CV_2024</a>.</li>
+        here: <a href="resources/SGerberding_CV_Jan_2026.pdf">SGerberding_CV_Jan_2026</a>.</li>
 </ul>
-
 
 <h2>Open-source Projects I've contributed to:</h2>
 <ul>
