--- a/software.html
+++ b/software.html
@@ -7,6 +7,7 @@
             <li> <a href="selected_works.html">Selected Works</a></li>
             <li> <a href="software.html">Software & Codes</a></li>
             <li> <a href="for_professionals.html">For Employers</a></li>
+            <li> <a href="writings.html">Wrtings, Language, and Literature</a></li>
         </ul>
     </nav>
 
@@ -27,8 +28,8 @@
 
     <footer>
         <p id="footnote"> Note that many of these codes require the <em>deal.II</em> finite element library. This
-            library can be found <a href="https://www.dealii.org/">here. Additionally, these repos may be private; if
-                you would like access, please feel free to email me and I'd be happy to get you the code. </a>.</p>
+            library can be found <a href="https://www.dealii.org/">here</a>. Additionally, these repos may be private;
+            if you would like access, please feel free to email me and I'd be happy to get you the code.</p>
     </footer>
 
 </body>
