--- a/writings.html
+++ b/writings.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Non-academic & personal writings</title>
-</head>
-
 <body>
 
     <nav>
@@ -13,7 +9,7 @@
             <li><a href="selected_works.html">Selected Works</a></li>
             <li><a href="software.html">Software &amp; Codes</a></li>
             <li><a href="for_professionals.html">For Employers</a></li>
-            <li><a href="writings.html">Book Reviews</a></li>
+            <li><a href="writings.html">Wrtings, Language, and Literature</a></li>
         </ul>
     </nav>
 
@@ -38,3 +34,60 @@
             href="resources/JL_Guermond_Directed_Studies___Conservation_Laws__Notes.pdf">Conservation_laws</a>. </li>
     <li>Short proof for "Strang's Picture" from seminar with Dr. Peter Kuchment: <a
             href="resources/Proof_of_Strang_s_Picture.pdf">Proof_of_strangs_diagram</a></li>
+
+    <h2>Books I've Read Recently:</h2>
+    <h3>2025:</h3>
+    <ul>
+        <li><em>The Wolf and The Watchman</em> by Niklas Natt och Dag</li>
+        <li><em>Empire of the Dawn</em> by Jay Kristoff</li>
+        <li><em>No Country for Old Men</em> by Cormac McCarthy</li>
+        <li><em>Katabasis</em> by R.F. Kuang</li>
+        <li><em>Letters to a Young Contrarian</em> by Christopher Hitchens</li>
+        <li><em>Moonflower Murders</em> by Anthony Horowitz</li>
+        <li><em>Ender's Game</em> by Orson Scott Card</li>
+        <li><em>A Whiff of Death</em> by Isaac Asimov</li>
+        <li><em>How to Solve Your Own Murder</em> by Kristen Perrin</li>
+        <li><em>The Screwtape Letters</em> by C.S. Lewis</li>
+        <li><em>Babel</em> by R.F. Kuang </li>
+        <li><em>The Three-Body Problem</em> by Liu Cixin </li>
+        <li><em>The Hero of Ages</em> by Brandon Sanderson </li>
+        <li><em>Close to Death</em> by Anthony Horowitz</li>
+        <li><em>The 7.5 Deaths of Evelyn Hardcastle</em> by Stuart Turton </li>
+        <li><em>The Adventures of Sherlock Holmes</em> by Arthur Conan Doyle</li>
+        <li><em>The Inimitable Jeeves</em> by P.G. Wodehouse</li>
+        <li><em>Finite and Infinite Games: A Vision of Life as Play and Possibility</em> by James P. Carse</li>
+        <li><em>The Well of Ascension</em> by Brandon Sanderson</li>
+        <li><em>Good Omens</em> by Terry Pratchett and Neil Gaiman</li>
+        <li><em>Utilitarianism</em> by John Stuart Mill </li>
+        <li><em>Mistborn</em> by Brandon Sanderson</li>
+        <li><em>The God Delusion</em> by Richard Dawkins</li>
+        <li><em>Murder Your Employer</em> by Rupert Holmes</li>
+        <li><em>The Elements of Style</em> by William Strunk and E.B. White</li>
+        <li><em>The Sign of Four</em> by Arthur Conan Doyle</li>
+    </ul>
+
+    <h3>
+        2024:
+    </h3>
+    <ul>
+        <li><em>The War of the Worlds</em> by H.G. Wells</li>
+        <li><em>Tyrant: Shakespeare on Politics</em> by Stephen Greenblatt</li>
+        <li><em>The Professor</em> by Lauren Nossett</li>
+        <li><em>Nothing Good Can Come From This</em> by Kristi Coulter</li>
+        <li><em>Foundryside</em> by Robert Bennett Jackson</li>
+        <li><em>The Pale Blue Eye</em> by Louis Bayard</li>
+        <li><em>Empire of the Damned</em> by Jay Kristoff </li>
+        <li><em>The Spy Who Came In From the Cold</em> by John Le Carre</li>
+        <li><em>Legacy of Spies</em> by John Le Carre</li>
+        <li><em>The Hollow Crown: Shakespeare on How Leaders Rise, Rule, and Fall</em> by Elliot Cohen</li>
+        <li><em>Dracula</em> by Bram Stoker</li>
+        <li><em>Little Women</em> by Louisa May Alcott</li>
+        <li><em>Magpie Murders</em> by Anthony Horowitz</li>
+        <li><em>American on Purpose</em> by Craig Ferguson</li>
+        <li><em>The Red House Mystery</em> by A.A. Milne </li>
+        <li><em>Locklands</em> by Robert Bennett Jackson</li>
+        <li><em>The Housemaid</em> by Freida McFadden</li>
+        <li><em>Green Lights</em> by Matthew McConaughey </li>
+        <li><em>Relativity</em> by Albert Einstein</li>
+        <li><em>The Mysterious Affair at Styles</em> by Agatha Christie</li>
+    </ul>
