--- a/for_professionals.html
+++ b/for_professionals.html
@@ -9,9 +9,11 @@
     </ul>
 </nav>
 
-<h1>Introduction:</h1>
-
-
+<p>
+    Welcome to the professional resources page! Here you can find my CV as well as open-source projects that I have
+    contributed to. If you are an employer or a collaborator looking to learn more about my professional experience and
+    skills, this is the place to be.
+</p>
 
 <h2>Seth's Professional Resources</h2>
 <ul>
